# navigation_position

./: auxiliary.py  change_script.py  decoding_script.py  pyproject.toml  representational_analysis.py  visualization.py
analysis/: change.py  representations.py
navigation_position/: auxiliary.py  change_script.py  decoding_script.py  figures.conf  figures.py  fixation_script.py  summary.py  visualization.py
navigation_position/analysis/: behavior.py  representations.py  view.py
