[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "navigation-position"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "wj2", email = "wjeffreyjohnston@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "numpy~=1.26.4",
  "pandas~=2.2.2",
  "matplotlib~=3.9.2",
  "scikit-learn~=1.5.1",
  "scikit-video~=1.1.11",
  "imbalanced-learn~=0.12.3",
  "rsatoolbox~=0.1.5",
  "scikit-image~=0.22.0",
]

[project.optional-dependencies]
general = [
  "general[tensorflow] @ git+https://github.com/wj2/general-neural.git",
]

[project.scripts]
np_decoding = "navigation_position.decoding_script:main"
np_change = "navigation_position.change_script:main"

[tool.hatch.metadata]
allow-direct-references = true

[project.urls]
Documentation = "https://github.com/wj2/navigation-position#readme"
Issues = "https://github.com/wj2/navigation-position/issues"
Source = "https://github.com/wj2/navigation-position"

[tool.hatch.version]
path = "navigation_position/__about__.py"

[tool.hatch.envs.test]
python = "3.12"
features = [
  "general",
]
